[package]
name = "metamask"
version = "0.1.0"
edition = "2021"
description = "MetaMask wallet for the desktop"
default-run = "metamask"

[dependencies]
anyhow = "1"
wry = "0.13"
rust-embed = "6.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
mime_guess = "2"
mime = "0.3"
clap = { version = "3", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
log = "0.4"
pretty_env_logger = "0.4"
actix = { version = "0.12", default-features = false }
actix-web = "4.0.0-rc.2"
actix-cors = "0.6.0-beta.8"
actix-rt = "2.6"
url = "2"
json-rpc2 = { version = "0.11", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers = "0.6"
ethers-core = "0.6"
once_cell = "1.9"
async-trait = "0.1"
hex = "0.4"
home = "0.5.3"
bip39 = { version = "1", features = ["rand"] }
rand = "0.8.4"
eth-keystore = "0.3"
reqwest = "0.11"

[dependencies.oxide-auth]
version = "0.5.1"
branch = "actix-4.x"
git = "https://github.com/tmpfs/oxide-auth"

[dependencies.oxide-auth-actix]
version = "0.1.0"
branch = "actix-4.x"
git = "https://github.com/tmpfs/oxide-auth"

[package.metadata.bundle]
name = "MetaMask"
identifier = "io.metamask.wallet"
icon = ["icon/32x32.png", "icon/128x128.png", "icon/128x128@2x.png"]
version = "1.0.0"
#resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Consensys 2022. All rights reserved."
short_description = "Crypto Wallet"
long_description = """
A crypto wallet and gateway to blockchain applications.
"""
